spacing for avatar flair by offsetting icon size
this fix should only be appplid for user cards that have icons, otherwise it looks funny, look into this

--- a/common/common.scss
+++ b/common/common.scss
@@ -14,6 +14,12 @@
   margin-left: 10px;
 }
 
+// offset user card flair movement 
+// but should only be applied if the icons are present, otherwise it looks dumb
+.user-card-avatar.avatar-flair {
+ margin-bottom: 1.2em;
+}
+
 
 #user-card {
   .card-content {
