add color as a setting

--- a/common/common.scss
+++ b/common/common.scss
@@ -4,7 +4,7 @@
   }
   .fa {
       font-size: 1.2em;
-      color: #000;
+   color: #{$icon-color};
   }
   .fa.d-icon.svg-icon.svg-string {
       margin-left: 0px;
